--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
   },
   "dependencies": {
     "@fastify/cookie": "^9.2.0",
+    "@fastify/multipart": "^8.1.0",
     "aws-sdk": "^2.1513.0",
     "dotenv": "^16.3.1",
     "fastify-autoroutes": "^3.0.2",
+    "fastify-multer": "^2.0.3",
     "mysql2": "^3.6.5",
+    "path": "^0.12.7",
     "sequelize": "^6.35.1",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "xlsx": "^0.18.5"
   }
 }
